--- a/index.html
+++ b/index.html
@@ -404,8 +404,46 @@
           </li>
         </ul>
       </div>
+      <div>
+        <form action="">
+          <label>
+            Subscribe
+            <input type="email" placeholder="E-mail">
+          </label>
+
+          <button type="submit">Subscribe</button>
+        </form>
+      </div>
+
     </div>
   </footer>
+  <div class="modal-overlay">
+    <div class="modal">
+      <p class="modal-text">Leave your contacts and we will call you back</l>
+      <form class="modal-form" name="contacts">
+        <label>
+          Name
+          <input type="text" autofocus></label>
+        <label>
+          Phone
+          <input type="tel"></label>
+        <label>
+          Email
+          <input type="email"></label>
+        <label>
+          Comment
+          <textarea name="" id="">
+          Text input
+          </textarea>
+        </label>
+        <input id="conditions" type="checkbox" value="privacy-Policy" name="1">
+        <label for="conditions">
+          I accept the terms and conditions of the <a href="#">Privacy Policy</ah>
+        </label>
+        <button class="modal-btn" type="submit">Send</button>
+      </form>
+    </div>
+  </div>
 </body>
 
 </html>
