--- a/index.html
+++ b/index.html
@@ -404,14 +404,21 @@
           </li>
         </ul>
       </div>
-      <div>
-        <form action="">
-          <label>
+      <div class="footer-form">
+        <form name="form-action" class="footer-form-action">
+          <label for="form-email" class="footer-label">
             Subscribe
-            <input type="email" placeholder="E-mail">
           </label>
+          <div class="footer-form-wrapper">
+            <input id="form-email" class="footer-input" type="email" placeholder="E-mail">
 
-          <button type="submit">Subscribe</button>
+            <button class="footer-form-btn" type="submit">
+              Subscribe
+              <svg class="footer-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </div>
         </form>
       </div>
 
