--- a/index.html
+++ b/index.html
@@ -426,6 +426,11 @@
   </footer>
   <div class="modal-overlay">
     <div class="modal">
+      <button aria-label="close" type="button" class="modal-btn-close">
+        <svg class="modal-close-icon" width="8" height="8">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
       <p class="modal-text">Leave your contacts and we will call you back</l>
       <form class="modal-form" name="contacts">
         <label>
