--- a/index.html
+++ b/index.html
@@ -433,21 +433,23 @@
       </button>
       <p class="modal-text">Leave your contacts and we will call you back</l>
       <form class="modal-form" name="contacts">
-        <label>
-          Name
-          <input type="text" autofocus></label>
-        <label>
-          Phone
-          <input type="tel"></label>
-        <label>
-          Email
-          <input type="email"></label>
-        <label>
-          Comment
-          <textarea name="" id="">
+
+        <div class="modal-user">
+          <label for="user">Name</label>
+          <input id="user" class="modal-input" type="text" autofocus>
+        </div>
+
+        <label for="phone">Phone</label>
+        <input id="phone" class="modal-input" type="tel">
+
+        <label for="modal-email">Email</label>
+        <input id="modal-email" class="modal-input" type="email">
+
+        <label for="comment">Comment</label>
+        <textarea name="comment" id="comment">
           Text input
           </textarea>
-        </label>
+
         <input id="conditions" type="checkbox" value="privacy-Policy" name="1">
         <label for="conditions">
           I accept the terms and conditions of the <a href="#">Privacy Policy</ah>
