--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="container">
         <div class="promo-wrapper">
           <h1 class="promo-title">Effective Solutions for Your Business</h1>
-          <button class="promo-btn" type="button">Order Service</button>
+          <button class="promo-btn" type="button" data-modal-open>Order Service</button>
         </div>
       </div>
     </section>
@@ -405,12 +405,12 @@
         </ul>
       </div>
 
-      <form name="form-action" class="footer-form-action">
-        <label for="form-email" class="footer-label">
+      <div class="footer-form">
+        <p class="footer-label">
           Subscribe
-        </label>
-        <div class="footer-form-wrapper">
-          <input id="form-email" class="footer-input" type="email" placeholder="E-mail">
+        </p>
+        <form class="footer-form-wrapper">
+          <input class="footer-input" type="email" placeholder="E-mail">
 
           <button class="footer-form-btn" type="submit">
             Subscribe
@@ -418,25 +418,29 @@
               <use href="./images/icons.svg#icon-telegram"></use>
             </svg>
           </button>
-        </div>
-      </form>
+        </form>
+      </div>
 
 
     </div>
   </footer>
-  <div class="modal-overlay">
+  <div class="modal-overlay is-open" data-modal>
     <div class="modal">
-      <button aria-label="close" type="button" class="modal-btn-close">
+      <button aria-label="close" type="button" class="modal-btn-close" data-modal-close>
         <svg class="modal-close-icon" width="8" height="8">
           <use href="./images/icons.svg#icon-close"></use>
         </svg>
       </button>
       <p class="modal-text">Leave your contacts and we will call you back</l>
+
       <form class="modal-form" name="contacts">
 
+        <label class="modal-label" for="user">Name</label>
         <div class="modal-user">
-          <label for="user">Name</label>
           <input id="user" class="modal-input" type="text" autofocus>
+          <svg class="user-icon" width="18" height="18">
+            <use href="./images/icons.svg#icon-person"></use>
+          </svg>
         </div>
 
         <label for="phone">Phone</label>
@@ -458,6 +462,8 @@
       </form>
     </div>
   </div>
+
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
