--- a/index.html
+++ b/index.html
@@ -420,10 +420,9 @@
           </button>
         </form>
       </div>
-
-
     </div>
   </footer>
+
   <div class="modal-overlay is-open" data-modal>
     <div class="modal">
       <button aria-label="close" type="button" class="modal-btn-close" data-modal-close>
@@ -438,26 +437,35 @@
         <label class="modal-label" for="user">Name</label>
         <div class="modal-user">
           <input id="user" class="modal-input" type="text" autofocus>
-          <svg class="user-icon" width="18" height="18">
+          <svg class="user-icon" width="18" height="24">
             <use href="./images/icons.svg#icon-person"></use>
           </svg>
         </div>
 
-        <label for="phone">Phone</label>
-        <input id="phone" class="modal-input" type="tel">
+        <label class="modal-label" for="phone">Phone</label>
+        <div class="modal-user">
+          <input id="phone" class="modal-input" type="tel">
+          <svg class="user-icon" width="18" height="24">
+            <use href="./images/icons.svg#icon-phone"></use>
+          </svg>
+        </div>
 
-        <label for="modal-email">Email</label>
-        <input id="modal-email" class="modal-input" type="email">
+        <label class="modal-label" for="modal-email">Email</label>
+        <div class="modal-user">
+          <input id="modal-email" class="modal-input" type="email">
+          <svg class="user-icon" width="18" height="24">
+            <use href="./images/icons.svg#icon-email"></use>
+          </svg>
+        </div>
 
-        <label for="comment">Comment</label>
-        <textarea name="comment" id="comment">
-          Text input
-          </textarea>
+        <label class="modal-label" for="comment">Comment</label>
+        <textarea class="modal-textarea" name="comment" id="comment" placeholder="Text input"></textarea>
 
         <input id="conditions" type="checkbox" value="privacy-Policy" name="1">
         <label for="conditions">
-          I accept the terms and conditions of the <a href="#">Privacy Policy</ah>
+          I accept the terms and conditions of the <a class="conditions-link" href="#">Privacy Policy</a>
         </label>
+
         <button class="modal-btn" type="submit">Send</button>
       </form>
     </div>
