--- a/index.html
+++ b/index.html
@@ -461,10 +461,17 @@
         <label class="modal-label" for="comment">Comment</label>
         <textarea class="modal-textarea" name="comment" id="comment" placeholder="Text input"></textarea>
 
-        <input id="conditions" type="checkbox" value="privacy-Policy" name="1">
-        <label for="conditions">
-          I accept the terms and conditions of the <a class="conditions-link" href="#">Privacy Policy</a>
-        </label>
+        <div class="modal-checkbox">
+          <input class="modal-checkbox-input visually-hidden" id="conditions" type="checkbox" value="privacy-Policy"
+            name="1">
+          <label class="modal-checkbox-label" for="conditions">
+            <span class="modal-checkbox-span">
+              <svg class="modal-checkbox-icon" width="10" height="8">
+                <use href="./images/icons.svg#icon-vector"></use>
+              </svg>
+            </span>I accept the terms and conditions of the <a class="conditions-link" href="#">Privacy Policy</a>
+          </label>
+        </div>
 
         <button class="modal-btn" type="submit">Send</button>
       </form>
