--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
       </div>
 
       <div class="footer-form">
-        <p class="footer-label">
+        <p class="footer-title">
           Subscribe
         </p>
         <form class="footer-form-wrapper">
